RESOLVED FIXED280617
[WPE][Debug] ASSERTION FAILED: canSafelyBeUsed()
https://bugs.webkit.org/show_bug.cgi?id=280617
Summary [WPE][Debug] ASSERTION FAILED: canSafelyBeUsed()
Vitaly Dyackhov
Reported 2024-09-30 08:28:20 PDT
``` ASSERTION FAILED: canSafelyBeUsed() /home/vitaly/WebKit/WebKitBuild/WPE/Release/WTF/Headers/wtf/WeakRef.h(111) : T* WTF::WeakRef< <template-parameter-1-1>, <template-parameter-1-2> >::operator->() const [with T = WebKit::WebPage; WeakPtrImpl = WTF::DefaultWeakPtrImpl] 1 0x7fe03db07cf7 WebKit::AcceleratedSurfaceLibWPE::initialize() 2 0x7fe03db08872 non-virtual thunk to WebKit::LayerTreeHost::nativeSurfaceHandleForCompositing() 3 0x7fe03d512d44 WTF::Detail::CallableWrapper<WebKit::ThreadedCompositor::ThreadedCompositor(WebKit::ThreadedCompositor::Client&, unsigned int, WebCore::IntSize const&, float, bool, WebKit::ThreadedCompositor::DamagePropagation)::{lambda()#2}, void>::call() 4 0x7fe03d50d030 WTF::Detail::CallableWrapper<WebKit::CompositingRunLoop::performTaskSync(WTF::Function<void ()>&&)::{lambda()#1}, void>::call() 5 0x7fe03f85c7e3 WTF::RunLoop::performWork() 6 0x7fe03f92a39d WTF::RunLoop::RunLoop()::{lambda(void*)#1}::_FUN(void*) 7 0x7fe03f92b7a3 WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::_FUN(_GSource*, int (*)(void*), void*) 8 0x7fe038b1448e ??? 9 0x7fe038b73717 ??? 10 0x7fe038b14f77 g_main_loop_run 11 0x7fe03f92b9b0 WTF::RunLoop::run() 12 0x7fe03f8a9fd8 WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) 13 0x7fe03f931ddd WTF::wtfThreadEntryPoint(void*) 14 0x7fe03889ca94 start_thread 15 0x7fe038929c3c clone3 ```
Attachments
Vitaly Dyackhov
Comment 1 2024-09-30 08:36:10 PDT
Carlos Garcia Campos
Comment 2 2024-10-01 02:28:04 PDT
Carlos Garcia Campos
Comment 3 2024-10-02 01:56:51 PDT
*** Bug 280746 has been marked as a duplicate of this bug. ***
EWS
Comment 4 2024-10-02 03:57:27 PDT
Committed 284554@main (4d33c93bc32a): <https://commits.webkit.org/284554@main> Reviewed commits have been landed. Closing PR #34497 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.