[WPE][Debug] ASSERTION FAILED: canSafelyBeUsed() https://bugs.webkit.org/show_bug.cgi?id=280617

Reviewed by NOBODY (OOPS!).

`AcceleratedSurfaceLibWPE::initialize()` might be called from non-main thread.

* Source/WebKit/WebProcess/WebPage/libwpe/AcceleratedSurfaceLibWPE.cpp:
(WebKit::AcceleratedSurfaceLibWPE::initialize):